--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "axios": "^0.19.2",
     "clipboard": "^2.0.6",
     "codemirror": "^5.55.0",
-    "core-js": "^3.6.5",
     "driver.js": "^0.9.8",
     "dropzone": "^5.7.1",
     "echarts": "^4.8.0",
@@ -47,6 +46,7 @@
     "xlsx": "^0.16.3"
   },
   "devDependencies": {
+    "@hapi/hoek": "^9.0.4",
     "@vue/cli-plugin-babel": "^4.4.6",
     "@vue/cli-plugin-e2e-nightwatch": "^4.4.6",
     "@vue/cli-plugin-eslint": "~4.4.6",
@@ -57,17 +57,21 @@
     "@vue/test-utils": "1.0.3",
     "babel-eslint": "^10.1.0",
     "chai": "^4.2.0",
+    "chokidar": "^3.4.0",
+    "chromedriver": "^83.0.1",
     "core-js": "^3.6.5",
     "css-loader": "^3.6.0",
     "eslint": "^6.8.0",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
     "eslint-plugin-vue": "^6.2.2",
     "eslint-plugin-vuetify": "^1.0.0-beta.6",
     "less": "^3.11.3",
     "less-loader": "^6.2.0",
+    "prettier": "^2.0.5",
     "sass": "^1.26.10",
     "sass-loader": "^8.0.2",
     "script-loader": "^0.7.2",
